--- a/_modules/iceprod/core/exe_json.html
+++ b/_modules/iceprod/core/exe_json.html
@@ -155,7 +155,7 @@
                             <span class="o">%</span><span class="p">(</span><span class="n">ret</span><span class="p">,</span><span class="n">url</span><span class="p">,</span><span class="n">passkey</span><span class="p">))</span></div>
 
 <div class="viewcode-block" id="downloadtask"><a class="viewcode-back" href="../../../core/exe_json.html#iceprod.core.exe_json.downloadtask">[docs]</a><span class="k">def</span> <span class="nf">downloadtask</span><span class="p">(</span><span class="n">gridspec</span><span class="p">,</span> <span class="n">resources</span><span class="o">=</span><span class="p">{}):</span>
-    <span class="sd">&quot;&quot;&quot;Download a new task from the server&quot;&quot;&quot;</span>
+    <span class="sd">&quot;&quot;&quot;Download new task(s) from the server&quot;&quot;&quot;</span>
     <span class="n">hostname</span> <span class="o">=</span> <span class="n">functions</span><span class="o">.</span><span class="n">gethostname</span><span class="p">()</span>
     <span class="n">domain</span> <span class="o">=</span> <span class="s">&#39;.&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">hostname</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s">&#39;.&#39;</span><span class="p">)[</span><span class="o">-</span><span class="mi">2</span><span class="p">:])</span>
     <span class="k">try</span><span class="p">:</span>
@@ -171,13 +171,20 @@
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
         <span class="c"># an error occurred</span>
         <span class="k">raise</span> <span class="n">task</span>
-    <span class="k">if</span> <span class="n">task</span> <span class="ow">and</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span> <span class="n">dataclasses</span><span class="o">.</span><span class="n">Job</span><span class="p">):</span>
-        <span class="k">try</span><span class="p">:</span>
-            <span class="n">task</span> <span class="o">=</span> <span class="n">dict_to_dataclasses</span><span class="p">(</span><span class="n">task</span><span class="p">)</span>
-        <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;not a Job: %r&#39;</span><span class="p">,</span><span class="n">task</span><span class="p">)</span>
-            <span class="k">raise</span>
-    <span class="k">return</span> <span class="n">task</span></div>
+    <span class="k">if</span> <span class="n">task</span> <span class="ow">and</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span><span class="nb">list</span><span class="p">):</span>
+        <span class="n">task</span> <span class="o">=</span> <span class="p">[</span><span class="n">task</span><span class="p">]</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="k">return</span> <span class="k">None</span>
+    <span class="c"># convert dict to Job</span>
+    <span class="n">ret</span> <span class="o">=</span> <span class="p">[]</span>
+    <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">task</span><span class="p">:</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">t</span><span class="p">,</span> <span class="n">dataclasses</span><span class="o">.</span><span class="n">Job</span><span class="p">):</span>
+            <span class="k">try</span><span class="p">:</span>
+                <span class="n">ret</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">dict_to_dataclasses</span><span class="p">(</span><span class="n">t</span><span class="p">))</span>
+            <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;not a Job: %r&#39;</span><span class="p">,</span><span class="n">t</span><span class="p">)</span>
+                <span class="k">raise</span>
+    <span class="k">return</span> <span class="n">ret</span></div>
 
 <div class="viewcode-block" id="processing"><a class="viewcode-back" href="../../../core/exe_json.html#iceprod.core.exe_json.processing">[docs]</a><span class="k">def</span> <span class="nf">processing</span><span class="p">(</span><span class="n">task_id</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
