--- a/_modules/iceprod/core/exe_json.html
+++ b/_modules/iceprod/core/exe_json.html
@@ -184,6 +184,8 @@
             <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
                 <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;not a Job: %r&#39;</span><span class="p">,</span><span class="n">t</span><span class="p">)</span>
                 <span class="k">raise</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">ret</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">t</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">ret</span></div>
 
 <div class="viewcode-block" id="processing"><a class="viewcode-back" href="../../../core/exe_json.html#iceprod.core.exe_json.processing">[docs]</a><span class="k">def</span> <span class="nf">processing</span><span class="p">(</span><span class="n">task_id</span><span class="p">):</span>
