--- a/_modules/iceprod/core/exe_json.html
+++ b/_modules/iceprod/core/exe_json.html
@@ -171,10 +171,10 @@
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span><span class="ne">Exception</span><span class="p">):</span>
         <span class="c"># an error occurred</span>
         <span class="k">raise</span> <span class="n">task</span>
+    <span class="k">if</span> <span class="ow">not</span> <span class="n">task</span><span class="p">:</span>
+        <span class="k">return</span> <span class="k">None</span>
     <span class="k">if</span> <span class="n">task</span> <span class="ow">and</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">task</span><span class="p">,</span><span class="nb">list</span><span class="p">):</span>
         <span class="n">task</span> <span class="o">=</span> <span class="p">[</span><span class="n">task</span><span class="p">]</span>
-    <span class="k">else</span><span class="p">:</span>
-        <span class="k">return</span> <span class="k">None</span>
     <span class="c"># convert dict to Job</span>
     <span class="n">ret</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">task</span><span class="p">:</span>
