--- a/iceprod/server/data/www_templates/task_browse.html
+++ b/iceprod/server/data/www_templates/task_browse.html
@@ -12,7 +12,9 @@
         <th>Name</th>
         <th>Failures</th>
         <th>Job Index</th>
-        <th></th>
+        <th><a href='javascript:call2("reset_task");'>Reset All</a></th>
+        <th><a href='javascript:call2("resume_task");'>Resume All</a></th>
+        <th><a href='javascript:call2("suspend_task");'>Suspend All</a></th>
     </tr>
     {% for t in tasks %}
     <tr>
@@ -21,10 +23,9 @@
         <td>{{ tasks[t]['failures'] }}</td>
         <td>{{ tasks[t]['job_index'] }}</td>
         {% if (current_user) %}
-        <td>
-        <a href='javascript:call("reset_task", "{{ tasks[t]['task_id'] }}");'>Reset</a>
-        <a href='javascript:call("resume_task", "{{ tasks[t]['task_id'] }}");'>Resume</a>
-        <a href='javascript:call("suspend_task", "{{ tasks[t]['task_id'] }}");'>Suspend</a>
+        <td><a href='javascript:call("reset_task", "{{ tasks[t]['task_id'] }}");'>Reset</a></td>
+        <td><a href='javascript:call("resume_task", "{{ tasks[t]['task_id'] }}");'>Resume</a></td>
+        <td><a href='javascript:call("suspend_task", "{{ tasks[t]['task_id'] }}");'>Suspend</a></td>
         </td>
         {% end %}
     </tr>
@@ -65,10 +66,18 @@
 {% if (current_user) %}
 <script type="text/javascript" src="/static/json-rpc.js"></script>
 <script type="text/javascript">
-function call(func_name, task){
-    RPCclient(func_name, {passkey: "{{ passkey }}", task:task }, callback=function(return_data){
+function call(func_name, tasks){
+    RPCclient(func_name, {passkey: "{{ passkey }}", tasks:tasks }, callback=function(return_data){
 
     });
+};
+function call2(func_name){
+    var tasks = [
+{% for t in tasks %}
+        "{{tasks[t]['task_id']}}",
+{% end %}
+    ];
+    call(func_name, tasks);
 };
 {% end %}
 </script>
