--- a/server/details/dbtables.html
+++ b/server/details/dbtables.html
@@ -233,6 +233,8 @@
 <p><strong>task_lookup</strong></p>
 <ul class="simple">
 <li>task_id : str</li>
+<li>queue : str</li>
+<li>insert_time : float  <span class="gray"># time.time() value</span></li>
 <li>req_cpu : int</li>
 <li>req_gpu : int</li>
 <li>req_memory : float</li>
