--- a/_modules/iceprod/server/dbmethods/queue.html
+++ b/_modules/iceprod/server/dbmethods/queue.html
@@ -139,6 +139,7 @@
 
 <span class="kn">from</span> <span class="nn">iceprod.server</span> <span class="k">import</span> <span class="n">GlobalID</span>
 <span class="kn">from</span> <span class="nn">iceprod.server.dbmethods</span> <span class="k">import</span> <span class="n">_Methods_Base</span><span class="p">,</span><span class="n">datetime2str</span><span class="p">,</span><span class="n">str2datetime</span><span class="p">,</span><span class="n">nowstr</span>
+<span class="kn">from</span> <span class="nn">iceprod.server</span> <span class="k">import</span> <span class="n">task_queue</span>
 
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="s">&#39;dbmethods.queue&#39;</span><span class="p">)</span>
 
@@ -1157,21 +1158,26 @@
 <span class="sd">        Args:</span>
 <span class="sd">            tasks (dict): dict of {task_id: resources}</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">now</span> <span class="o">=</span> <span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span>
         <span class="n">keys</span> <span class="o">=</span> <span class="n">tasks</span><span class="o">.</span><span class="n">values</span><span class="p">()[</span><span class="mi">0</span><span class="p">]</span>
-        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;replace into task_lookup (task_id,&#39;</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;replace into task_lookup (task_id,queue,insert_time,&#39;</span>
         <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s">&#39;req_&#39;</span><span class="o">+</span><span class="n">k</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">keys</span><span class="p">)</span>
-        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;) values (?,&#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;) values (?,?,?,&#39;</span>
         <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s">&#39;?&#39;</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">keys</span><span class="p">)</span><span class="o">+</span><span class="s">&#39;)&#39;</span>
-        <span class="n">bindings</span> <span class="o">=</span> <span class="p">[(</span><span class="n">task_id</span><span class="p">,)</span><span class="o">+</span><span class="nb">tuple</span><span class="p">(</span><span class="n">tasks</span><span class="p">[</span><span class="n">task_id</span><span class="p">][</span><span class="n">k</span><span class="p">]</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">keys</span><span class="p">)</span> <span class="k">for</span> <span class="n">task_id</span> <span class="ow">in</span> <span class="n">tasks</span><span class="p">]</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">[]</span>
+        <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">tasks</span><span class="p">:</span>
+            <span class="n">reqs</span> <span class="o">=</span> <span class="n">tasks</span><span class="p">[</span><span class="n">t</span><span class="p">]</span>
+            <span class="n">task_queue</span><span class="o">.</span><span class="n">get_queue</span><span class="p">(</span><span class="n">reqs</span><span class="p">)</span>
+            <span class="n">bindings</span><span class="o">.</span><span class="n">append</span><span class="p">((</span><span class="n">task_id</span><span class="p">,</span><span class="n">queue</span><span class="p">,</span><span class="n">now</span><span class="p">)</span><span class="o">+</span><span class="nb">tuple</span><span class="p">(</span><span class="n">reqs</span><span class="p">[</span><span class="n">k</span><span class="p">]</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">keys</span><span class="p">))</span>
         <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">([</span><span class="n">sql</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="n">bindings</span><span class="p">],</span> <span class="n">bindings</span><span class="p">)</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
 <div class="viewcode-block" id="queue.queue_get_task_lookup"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.queue.queue.queue_get_task_lookup">[docs]</a>    <span class="k">def</span> <span class="nf">queue_get_task_lookup</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Get all the tasks in the lookup.</span>
+<span class="sd">        Get the resources for all tasks in the lookup.</span>
 
 <span class="sd">        Returns:</span>
-<span class="sd">            dict: tasks</span>
+<span class="sd">            dict: {task_id: resources}</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">with</span> <span class="p">(</span><span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">acquire_lock</span><span class="p">(</span><span class="s">&#39;queue&#39;</span><span class="p">)):</span>
             <span class="c"># get tasks from lookup</span>
@@ -1182,7 +1188,7 @@
             <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">:</span>
                 <span class="n">row</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_list_to_dict</span><span class="p">(</span><span class="s">&#39;task_lookup&#39;</span><span class="p">,</span><span class="n">row</span><span class="p">)</span>
                 <span class="n">tid</span> <span class="o">=</span> <span class="n">row</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s">&#39;task_id&#39;</span><span class="p">)</span>
-                <span class="n">task_ids</span><span class="p">[</span><span class="n">tid</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="n">k</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s">&#39;req_&#39;</span><span class="p">,</span><span class="s">&#39;&#39;</span><span class="p">):</span><span class="n">row</span><span class="p">[</span><span class="n">k</span><span class="p">]</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">row</span><span class="p">}</span>
+                <span class="n">task_ids</span><span class="p">[</span><span class="n">tid</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="n">k</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s">&#39;req_&#39;</span><span class="p">,</span><span class="s">&#39;&#39;</span><span class="p">):</span><span class="n">row</span><span class="p">[</span><span class="n">k</span><span class="p">]</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">row</span> <span class="k">if</span> <span class="n">k</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s">&#39;req_&#39;</span><span class="p">)}</span>
 
             <span class="c"># verify that they are valid</span>
             <span class="n">tasks</span> <span class="o">=</span> <span class="p">{}</span>
