--- a/iceprod/server/data/www_templates/job_detail.html
+++ b/iceprod/server/data/www_templates/job_detail.html
@@ -25,9 +25,9 @@
 
 {% if (current_user) %}
 <div class="action">
-    <button onclick='call("reset_job");'>Reset</button>
-    <button onclick='call("hard_reset_job");'>Hard Reset</button>
-    <button onclick='call("suspend_job");'>Suspend</button>
+    <button onclick='call("reset_jobs");'>Reset</button>
+    <button onclick='call("hard_reset_jobs");'>Hard Reset</button>
+    <button onclick='call("suspend_jobs");'>Suspend</button>
 </div>
 {% end %}
 
@@ -66,7 +66,7 @@
 <script type="text/javascript">
     var job_id = "{{ job['job_id'] }}";
     function call(func_name){
-        RPCclient(func_name, {passkey: "{{ passkey }}", job_id:job_id }, callback=function(return_data){
+        RPCclient(func_name, {passkey: "{{ passkey }}", job_ids:job_id }, callback=function(return_data){
             location.reload(true);
         });
     };
