--- a/iceprod/server/data/www_templates/base.html
+++ b/iceprod/server/data/www_templates/base.html
@@ -18,7 +18,9 @@
 <![endif]-->
     <div class="page">
         <header>
-            <a href="/" class="title">IceProd</a>
+            <a href="/" class="title">
+                <img width=155 height=60 src="/static/logo_155x60.png" alt="IceProd" /></a>
+            </a>
             <nav class="menu">
                 <ul>
                 <li{% if section == 'dataset' %} class="current"{% end %}><a href="/dataset">Datasets</a></li>
