--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -43,7 +43,7 @@
 <div class="jobs">
 {% for s in jobs %}
 <div>
-  <div style="display:inline;width:40px"><a href="/job?status={{ url_escape(s) }}&dataset_id={{ url_escape(dataset_id) }}">{{ s }}</a></div>
+  <div style="display:inline;width:40px"><a href="/dataset/{{ url_escape(dataset_id) }}/job?status={{ url_escape(s) }}">{{ s }}</a></div>
   <div style="display:inline;width:40px">{{ jobs[s] }}</div>
 </div>
 {% end %}
@@ -54,7 +54,7 @@
 <div class="tasks">
 {% for s in tasks %}
 <div>
-  <div style="display:inline;width:40px"><a href="/task?status={{ url_escape(s) }}&dataset_id={{ url_escape(dataset_id) }}">{{ s }}</a></div>
+  <div style="display:inline;width:40px"><a href="/dataset/{{ url_escape(dataset_id) }}/task?status={{ url_escape(s) }}">{{ s }}</a></div>
   <div style="display:inline;width:40px">{{ tasks[s] }}</div>
 </div>
 {% end %}
@@ -73,13 +73,13 @@
         </tr>
         {% for t in task_info %}
         <tr>
-            <td>{{ task_info[t]['task_name'] }}</td>
-            <td>{{ task_info[t]['task_type'] }}</td>
-            <td>{{ task_info[t]['num_waiting'] }}</td>
-            <td>{{ task_info[t]['num_queued'] }}</td>
-            <td>{{ task_info[t]['num_running'] }}</td>
-            <td>{{ task_info[t]['num_completions'] }}</td>
-            <td>{{ task_info[t]['num_error'] }}</td>
+            <td>{{ t }}</td>
+            <td>{{ task_info[t]['type'] }}</td>
+            <td>{{ task_info[t]['waiting'] }}</td>
+            <td>{{ task_info[t]['queued'] }}</td>
+            <td>{{ task_info[t]['processing'] }}</td>
+            <td>{{ task_info[t]['complete'] }}</td>
+            <td>{{ task_info[t]['error'] }}</td>
         </tr>
         {% end %}
     </table>
@@ -91,12 +91,12 @@
             <th>Max/min (hours)</th>
             <th>Eff</th>
         </tr>
-        {% for t in task_info %}
+        {% for t in task_stats %}
         <tr>
-            <td>{{ task_info[t]['task_name'] }}</td>
-            <td>{{ '{:0.2f}'.format(task_info[t]['avg_runtime']/3600) }} / {{ '{:0.2f}'.format(task_info[t]['stddev_runtime']/3600) }}</td>
-            <td>{{ '{:0.2f}'.format(task_info[t]['max_runtime']/3600) }} / {{ '{:0.2f}'.format(task_info[t]['min_runtime']/3600) }}</td>
-            <td>{{ '{:d}'.format(int(task_info[t]['efficiency']*100)) }}%</td>
+            <td>{{ t }}</td>
+            <td>{{ '{:0.2f}'.format(task_stats[t]['avg_hrs']) }} / {{ '{:0.2f}'.format(task_stats[t]['stddev_hrs']) }}</td>
+            <td>{{ '{:0.2f}'.format(task_stats[t]['max_hrs']) }} / {{ '{:0.2f}'.format(task_stats[t]['min_hrs']) }}</td>
+            <td>{{ '{:d}'.format(int(task_stats[t]['efficiency']*100)) }}%</td>
         </tr>
         {% end %}
     </table>
