--- a/iceprod/server/data/www_templates/task_browse.html
+++ b/iceprod/server/data/www_templates/task_browse.html
@@ -13,9 +13,9 @@
         <th>Failures</th>
         <th>Job Index</th>
         {% if (current_user) %}
-        <th><a href='javascript:call("reset_task");'>Reset All</a></th>
-        <th><a href='javascript:call("resume_task");'>Resume All</a></th>
-        <th><a href='javascript:call("suspend_task");'>Suspend All</a></th>
+        <th><a href='javascript:set_tasks_and_jobs_status(task_ids_on_page, "reset", "{{ passkey }}");'>Reset All</a></th>
+        <th><a href='javascript:set_tasks_and_jobs_status(task_ids_on_page, "processing", "{{ passkey }}");'>Resume All</a></th>
+        <th><a href='javascript:set_tasks_status(task_ids_on_page, "suspended", "{{ passkey }}");'>Suspend All</a></th>
         {% end %}
     </tr>
     {% for t in tasks %}
@@ -25,9 +25,9 @@
         <td>{{ tasks[t]['failures'] }}</td>
         <td>{{ tasks[t]['job_index'] }}</td>
         {% if (current_user) %}
-        <td><a href='javascript:call("reset_task", "{{ tasks[t]['task_id'] }}");'>Reset</a></td>
-        <td><a href='javascript:call("resume_task", "{{ tasks[t]['task_id'] }}");'>Resume</a></td>
-        <td><a href='javascript:call("suspend_task", "{{ tasks[t]['task_id'] }}");'>Suspend</a></td>
+        <td><a href='javascript:set_tasks_and_jobs_status(["{{ tasks[t]['task_id'] }}"], "reset", "{{ passkey }}");'>Reset</a></td>
+        <td><a href='javascript:set_tasks_and_jobs_status(["{{ tasks[t]['task_id'] }}"], "processing", "{{ passkey }}");'>Resume</a></td>
+        <td><a href='javascript:set_tasks_status(["{{ tasks[t]['task_id'] }}"], "suspended", "{{ passkey }}");'>Suspend</a></td>
         {% end %}
     </tr>
     {% end %}
@@ -65,20 +65,12 @@
 {% block body_scripts %}
 
 {% if (current_user) %}
-<script type="text/javascript" src="/static/json-rpc.js"></script>
+<script type="text/javascript" src="/static/rest.js"></script>
 <script type="text/javascript">
-var all_tasks = [
-{% for t in tasks %}
+var task_ids_on_page = [
+    {% for t in tasks %}
         "{{tasks[t]['task_id']}}",
-{% end %}
+    {% end %}
 ];
-
-function call(func_name, tasks){
-    tasks = (typeof tasks === 'undefined') ? all_tasks: tasks;
-    RPCclient(func_name, {passkey: "{{ passkey }}", tasks:tasks }, callback=function(return_data){
-
-    });
-};
-{% end %}
 </script>
 {% end %}
